--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,19 +12,20 @@
         android:id="@+id/serviceToggleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_marginLeft="46dp"
         android:layout_marginTop="77dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         android:text="@string/service_toggle_text"
-        android:textSize="20sp" />
+        android:textSize="30sp" />
 
     <ToggleButton
         android:id="@+id/serviceToggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/serviceToggleText"
-        android:layout_toRightOf="@+id/serviceToggleText"
+        android:layout_below="@+id/serviceToggleText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
         android:text="ToggleButton"
         android:onClick="onServiceToggleClicked" />
 
