--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,6 +18,18 @@
         android:gravity="center_horizontal"
         android:text="@string/service_toggle_text"
         android:textSize="30sp" />
+    
 
 
-</RelativeLayout>
+</RelativeLayout> -->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+              
+        <ListView android:layout_width="match_parent"
+              android:id="@+id/contact_list"
+              android:layout_height="0dip"
+              android:layout_weight="1"/>
+</LinearLayout>
