--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
               android:layout_height="match_parent">
               
         <ListView android:layout_width="match_parent"
+              android:background="#ff000000"
               android:id="@+id/contact_list"
               android:layout_height="0dip"
               android:layout_weight="1"/>
