--- a/res/layout/contact_entry.xml
+++ b/res/layout/contact_entry.xml
@@ -8,6 +8,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/> -->
     <CheckBox android:text="@+id/display_name"
+        	  android:textColor="#ffffffff"
         	  android:id="@+id/set_service"
         	  android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
