--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <ListView
-        android:id="@+id/contact_list"
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        android:background="#ff000000" />
-
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+              
+        <ListView android:layout_width="match_parent"
+              android:background="#ff000000"
+              android:id="@+id/contact_list"
+              android:layout_height="0dip"
+              android:layout_weight="1"/>
 </LinearLayout>
