--- a/res/layout/contact_entry.xml
+++ b/res/layout/contact_entry.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+   			  android:orientation="horizontal"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/set_service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@+id/display_name"
-        android:textColor="#ffffffff" />
-
+    <CheckBox android:text="@+id/display_name"
+        	  android:textColor="#ffffffff"
+        	  android:id="@+id/set_service"
+        	  android:layout_width="wrap_content"
+              android:layout_height="wrap_content"/>
 </LinearLayout>
